Fixes "Contributions" control gets Overlapped in 200% Zoom mode
Bug: T253599

--- a/resources/skins.vector.styles/layout.less
+++ b/resources/skins.vector.styles/layout.less
@@ -145,7 +145,7 @@ body {
 	}
 
 	li {
-		float: left;
+		display: inline-block;
 	}
 }
 
